chore: improve language handling
